--- a/css/style.css
+++ b/css/style.css
@@ -31,6 +31,12 @@ main {
     margin: 10px;
 }
 
+.profile h1 {
+    font-size: 20px;
+    font-weight: 800;
+    margin-bottom: 5px;
+}
+
 .profile img {
     border-radius: 50%;
     width: 100px;
