--- a/css/style.css
+++ b/css/style.css
@@ -19,11 +19,12 @@ main {
 
 .social-links {
     display: flex;
-    height: 500px;
-    width: 300px;
+    height: 510px;
+    width: 310px;
     background-color: #1f1f1fff;
     flex-direction: column;
     align-items: center;
+    border-radius: 15px;
 }
 
 .profile {
